--- a/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderTicket.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/OrderManagement/OrderTicket.cshtml
@@ -247,15 +247,19 @@
         border-right: 1px solid #ccc; /* Viền phải của sidebar */
     }
 
+
     .app-sidebar__user {
         display: flex;
+        flex-direction: column;
         align-items: center;
-        padding: 10px 15px;
     }
 
     .app-sidebar__user-avatar {
+        width: 100px; /* hoặc một giá trị cụ thể khác tùy thuộc vào kích thước bạn muốn */
+        height: 100px; /* cần phải bằng width */
         border-radius: 50%;
         margin-right: 10px;
+        object-fit: cover; /* Đảm bảo hình ảnh không bị méo */
     }
 
     .app-sidebar__user-name {
@@ -376,21 +380,22 @@
         <hr>
         <ul class="app-menu">
             <style>
-             
+
 
                 .app-menu__item.selected {
                     font-weight: bold;
                 }
 
-               
-
             </style>
-            <li>
-                <a class="app-menu__item" href="table-data-oder.html">
-                    <i class='app-menu__icon bx bx-task'></i>
-                    <span class="app-menu__label">Thống kê</span>
-                </a>
-            </li>
+            @if (HttpContextAccessor.HttpContext.Session.GetInt32("RoleId") == 1)
+            {
+                <li>
+                    <a class="app-menu__item" href="~/DashBoard">
+                        <i class='app-menu__icon bx bx-task'></i>
+                        <span class="app-menu__label">Thống kê</span>
+                    </a>
+                </li>
+            }
             <li class="has-submenu" style="display:block" id="manageOrdersMenu">
                 <a class="app-menu__item active" href="javascript:void(0)" id="manageOrders">
                     <i class='app-menu__icon bx bx-id-card'></i>
@@ -416,6 +421,8 @@
                             Đơn đã thanh toán
                         </a>
                     </li>
+
+
                     <li>
                         <a href="~/OrderManagement/OrderCancel" class="app-menu__item" id="orderCancel">
                             <i class='bx bx-x-circle'></i> <!-- Thay đổi biểu tượng -->
@@ -453,28 +460,37 @@
                     } else if (currentUrl.includes("OrderTicket")) {
                         document.getElementById("createOrder").classList.add("selected");
                         manageOrdersMenu.classList.add("selected");
-                    } 
+                    }
                 });
             </script>
-
-            <li>
-                <a class="app-menu__item" href="#">
-                    <i class='app-menu__icon bx bx-user-voice'></i>
-                    <span class="app-menu__label">Quản lý khách hàng</span>
-                </a>
-            </li>
-            <li>
-                <a class="app-menu__item" href="table-data-product.html">
-                    <i class='app-menu__icon bx bx-purchase-tag-alt'></i>
-                    <span class="app-menu__label">Quản lý nhân viên</span>
-                </a>
-            </li>
             <li>
                 <a class="app-menu__item" href="table-data-oder.html">
                     <i class='app-menu__icon bx bx-task'></i>
                     <span class="app-menu__label">Quản lý sản phẩm</span>
                 </a>
             </li>
+            <li>
+                <a class="app-menu__item" href="table-data-oder.html">
+                    <i class='app-menu__icon bx bx-calendar-event'></i>
+                    <span class="app-menu__label">Quản lý sự kiện</span>
+                </a>
+            </li>
+            @if (HttpContextAccessor.HttpContext.Session.GetInt32("RoleId") == 1)
+            {
+                <li>
+                    <a class="app-menu__item" href="#">
+                        <i class='app-menu__icon bx bx-user-voice'></i>
+                        <span class="app-menu__label">Quản lý khách hàng</span>
+                    </a>
+                </li>
+                <li>
+                    <a class="app-menu__item" href="table-data-product.html">
+                        <i class='app-menu__icon bx bx-purchase-tag-alt'></i>
+                        <span class="app-menu__label">Quản lý nhân viên</span>
+                    </a>
+                </li>
+            }
+
         </ul>
     </aside>
 
@@ -509,7 +525,7 @@
                                         <div class="product-name">@item.TicketName</div>
                                         <div class="product-description">Cà phê phin với sữa đặc Việt Nam.</div>
                                         <div class="product-price">
-                                            @item.Price
+                                            @String.Format("{0:0,0} ₫",@item.Price)
                                         </div>
                                     </div>
                                     <div class="quantity-control">
