--- a/GreenGardenClient/GreenGardenClient/Views/Home/Index.cshtml
+++ b/GreenGardenClient/GreenGardenClient/Views/Home/Index.cshtml
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,700,900&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
     <link rel="stylesheet" href="~/css/bootstrap.min.css">
     <link rel="stylesheet" href="~/css/bootstrap-datepicker.css">
@@ -90,7 +91,7 @@
                                         <ul class="dropdown">
                                         @if (HttpContextAccessor.HttpContext.Session.GetInt32("RoleId")==1)
                                             {
-                                            <li><a href="~/OrderManagement" class="nav-link">Quản lí</a></li>
+                                            <li><a href="~/DashBoard" class="nav-link">Quản lí</a></li>
                                                 <li><a href="~/Home/Logout" class="nav-link">Đăng xuất</a></li>
                                                 }
                                             else if (HttpContextAccessor.HttpContext.Session.GetInt32("RoleId") == 2)
@@ -101,16 +102,26 @@
                                             else
                                             {
                                            
-                                                <li><a href="~/Service/OrderTicket" class="nav-link">Lịch sử đặt hàng</a></li>
-                                                <li><a href="~/Service/OrderFoodAndDrink" class="nav-link">Giỏ hàng</a></li>
+                                                <li><a href="~/Service/OrderHistory" class="nav-link">Lịch sử đặt hàng</a></li>
+                                                <li><a href="~/Service/Cart" class="nav-link">Giỏ hàng</a></li>
                                                 <li><a href="~/Home/Logout" class="nav-link">Đăng xuất</a></li>
                                             
                                             }
                                         </ul>
-                                        </li>
+
+                                    </li>
                                     }
 
                                 </li>
+                                @if (HttpContextAccessor.HttpContext.Session.GetInt32("RoleId") == 3)
+                                {
+                                    <li>
+                                        <a href="~/Service/Cart" class="nav-link">
+                                            <i class="fas fa-shopping-cart"></i>
+                                        </a>
+                                    </li>
+
+                                }
 
                             </ul>
                         </nav>
