--- a/GreenGardenClient/GreenGardenClient/wwwroot/css/main.css
+++ b/GreenGardenClient/GreenGardenClient/wwwroot/css/main.css
@@ -13713,14 +13713,14 @@ be a descendant of the grid when it is being dragged.
 }
 
 .app-nav__item {
-  display: block;
-  padding: 15px;
-  line-height: 0px;
-  color: rgb(0, 28, 64);
-  background: rgb(255, 212, 59);
-  -webkit-transition: background-color 0.3s ease;
-  -o-transition: background-color 0.3s ease;
-  transition: background-color 0.3s ease;
+    display: block;
+    padding: 15px;
+    line-height: 0px;
+    color: rgb(0, 28, 64);
+    background: rgb(195 195 195);
+    -webkit-transition: background-color 0.3s ease;
+    -o-transition: background-color 0.3s ease;
+    transition: background-color 0.3s ease;
 }
 
 .app-nav__item:hover, .app-nav__item:focus {
@@ -30133,7 +30133,7 @@ be a descendant of the grid when it is being dragged.
     padding: 15px;
     line-height: 0px;
     color: rgb(0, 28, 64);
-    background: rgb(255, 212, 59);
+    background: rgb(195 195 195);
     -webkit-transition: background-color 0.3s ease;
     -o-transition: background-color 0.3s ease;
     transition: background-color 0.3s ease;
